--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.7",
     "classnames": "^2.2.6",
     "core-js": "^3.4.5",
     "normalize.css": "^8.0.1",
